Fix a 16:9 tile aspect ratio bug on Firefox

--- a/style/main.scss
+++ b/style/main.scss
@@ -223,14 +223,14 @@ nav div.nav.primary-nav .nav-right a:last-child {
 /**
 * Experiment tiles
 */
-
-// Allow tiles to remain 16:9
-// even on small screens.
-.tile { display: flex; }
-
 .experiment-hero {
   position: relative;
   margin: 0 1rem 1rem 0;
+
+  > img {
+    width: 100%;
+    height: 100%;
+  }
 
   // 16:9 aspect ratio
   &::after {
@@ -288,40 +288,12 @@ nav div.nav.primary-nav .nav-right a:last-child {
   background-repeat: repeat;
   animation: experiment-hero-background 70s linear infinite;
 }
-.pinhole-hero .background {
-  &::after {
-    background-image: url(/assets/img/starfield.png);
-    background-position: 0px 0px;
-    background-repeat: repeat;
-    animation: experiment-hero-background 60s linear infinite;
-    animation-fill-mode: both;
-    backface-visibility: hidden;
-    perspective: 1000px;
-    width: 2000px;
-    height: 3000px;
-  }
-}
 
 .digital-painting {
   @include plumber(
     $line-height: 1,
     $leading-bottom: 1
   );
-}
-
-.matte-painting-rv-hero .background {
-  &::after {
-    background-image: url(/assets/img/matte-painting-river-valley.png);
-    background-size: cover;
-  }
-}
-
-.visualizer-hero {
-  .background {
-    &::after {
-      background-image: url(/assets/img/strapyourselfin.png);
-    }
-  }
 }
 
 /**
